Update Final Activity 1 CS2b - DSA.html

--- a/Final Activity 1 CS2b - DSA.html
+++ b/Final Activity 1 CS2b - DSA.html
@@ -9,21 +9,21 @@
 <body>
 
     <script>
-        let x = 8;
-let y = 14;
-let sum = x + y;
+var x = 8;
+var y = 14;
+var sum = x + y;
 console.log('Addition: '+sum);
-let dif = x - y;
+var dif = x - y;
 console.log('Difference: '+dif);
-let mul = x * y;
+var mul = x * y;
 console.log('Multiplication: '+mul);
-let div = x / y;
+var div = x / y;
 console.log('Division: '+div);
 
-let v = Math.pow(x,2);
+var v = Math.pow(x,2);
 console.log('Power: '+sum);
 
-let k = x % y;
+var k = x % y;
 console.log('Modulo: '+k);
     </script>
 
