Update Final Activity 1 CS2b - DSA.html

--- a/Final Activity 1 CS2b - DSA.html
+++ b/Final Activity 1 CS2b - DSA.html
@@ -12,19 +12,19 @@
 var x = 8;
 var y = 14;
 var sum = x + y;
-console.log('Addition: '+sum);
+console.log("Addition: "+sum);
 var dif = x - y;
-console.log('Difference: '+dif);
+console.log("Difference: "+dif);
 var mul = x * y;
-console.log('Multiplication: '+mul);
+console.log("Multiplication: "+mul);
 var div = x / y;
-console.log('Division: '+div);
+console.log("Division: "+div);
 
 var v = Math.pow(x,2);
-console.log('Power: '+sum);
+console.log("Power: "+sum);
 
 var k = x % y;
-console.log('Modulo: '+k);
+console.log("Modulo: "+k);
     </script>
 
 </body>
